--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get: ^4.7.2
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
+  firebase_core: ^3.12.1
+  firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
